<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kenweezy.mytablayouts.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_line"
        android:orderInCategory="201"
        android:title="@string/action_helpline"
        android:icon="@mipmap/helpline2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="101"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="search"
        android:orderInCategory="200"
        android:icon="@mipmap/search"
        app:showAsAction="ifRoom"
        />
</menu>
